Layout finalizado; js para esconder ou mostrar campos

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 	  <header class="p-3 mb-3 border-bottom shadow-sm bg-light">
 	    <div class="container">
 	      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-	        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+	        <a href="https://icei-puc-minas-pmv-ads.github.io/pmv-ads-2023-2-e1-proj-web-t11-pmv-ads-2023-2-e1-proj-spotgrade/src/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
 	          <i class="fa-solid fa-bullseye fa-2xl"></i>
 	          &nbsp;SpotGrade
 	        </a>
