--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -11,16 +11,16 @@
 		<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 
 		<!-- Bootstrap CSS -->
-		<link href="./assets/css/bootstrap.min.css" rel="stylesheet" >
+		<link href="../assets/css/bootstrap.min.css" rel="stylesheet" >
 
 		<script src="https://kit.fontawesome.com/8674b8f97f.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
-	  <header class="p-3 mb-3 border-bottom">
+	  <header class="p-3 mb-3 border-bottom shadow-sm bg-light">
 	    <div class="container">
 	      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-	        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+	        <a href="https://icei-puc-minas-pmv-ads.github.io/pmv-ads-2023-2-e1-proj-web-t11-pmv-ads-2023-2-e1-proj-spotgrade/src/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
 	          <i class="fa-solid fa-bullseye fa-2xl"></i>
 	          &nbsp;SpotGrade
 	        </a>
@@ -38,7 +38,7 @@
 	            <!-- <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle"> -->
 	            <i class="fa-regular fa-user"></i>
 	          </a>
-	          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+	          <ul class="dropdown-menu my-2" aria-labelledby="dropdownMenuLink">
 			    <li><a class="dropdown-item" href="#">Login</a></li>
 			    <li><a class="dropdown-item" href="#">Cadastro</a></li>
 			  </ul>
@@ -48,103 +48,96 @@
 	  </header>
 	  
 	  <content>
-	  	<div class="container">
+	  	<div class="container h-100">
+	  	  <form action="../usuario/login.html" class=" needs-validation">
 
 	  	  <div class="row py-5"><!-- Título -->
 	  	    <div class="col">
-	  	    	<h1 class="text-center">Confira os melhores da semana!</h1>
+	  	    	<h1 class="text-center">Conte-nos sobre você.</h1>
 	  	    </div>
 	  	  </div>
-
-	  	  <!-- <div class="row py-5"><!-- Abas -- >
-	  	    <div class="col">
-	  	    	<ul class="nav nav-tabs">
-				  <li class="nav-item">
-				    <a class="nav-link active" aria-current="page" href="#">Todos</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Bar</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Restaurante</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Hotel</a>
-				  </li>
-				</ul>
-	  	    </div>
-	  	  </div> -->
 	  	  
-	  	  <div class="row py-5"><!-- Cards dos lugares -->
+	  	  <!-- Formulario -->
+	  	  <div class="row py-3"><!-- Formulario - Linha -->
+	  	    	<span class="text-danger pb-3"> * - campos obrigatórios</span>
 	  	    <div class="col">
-	  	      <div class="card w-100" style="width: 18rem;">
-			    <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
-			    <div class="card-body">
-			      <h5 class="card-title">Lugar Um</h5>
-			      <p class="card-text">Texto descritivo pequeno sobre o lugar.</p>
-			      <a href="#" class="btn btn-primary">Detalhes</a>
-			    </div>
-			  </div>
-			</div>
-	  	    <div class="col">
-	  	      <div class="card w-100" style="width: 18rem;">
-			    <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
-			    <div class="card-body">
-			      <h5 class="card-title">Lugar Um</h5>
-			      <p class="card-text">Texto descritivo pequeno sobre o lugar.</p>
-			      <a href="#" class="btn btn-primary">Detalhes</a>
-			    </div>
-			  </div>
+	  	      <label for="inputName" class="form-label">Nome <span class="text-danger">*</span></label>
+			  <input type="text" class="form-control" id="inputName" required placeholder="Ex: Joana Maria">
 	  	    </div>
 	  	    <div class="col">
-	  	      <div class="card w-100" style="width: 18rem;">
-			    <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
-			    <div class="card-body">
-			      <h5 class="card-title">Lugar Um</h5>
-			      <p class="card-text">Texto descritivo pequeno sobre o lugar.</p>
-			      <a href="#" class="btn btn-primary">Detalhes</a>
-			    </div>
-			  </div>
+	  	      <label for="inputEmail" class="form-label">Email address <span class="text-danger">*</span></label>
+			  <input type="email" class="form-control" id="inputEmail" required placeholder="nome@exemplo.com">
+	  	    </div>
+	  	    <div class="col">
+	  	      <label for="inputTelefone" class="form-label">Telefone <span class="text-danger">*</span></label>
+			  <input type="phone" class="form-control" id="inputTelefone" required placeholder="(31) 99999-9999">
 	  	    </div>
 	  	  </div>
 
-	  	  <div class="row py-5"><!-- Cards dos lugares -->
+	  	  <div class="row py-3"><!-- Formulario - Linha -->
 	  	    <div class="col">
-	  	      <div class="card w-100" style="width: 18rem;">
-			    <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
-			    <div class="card-body">
-			      <h5 class="card-title">Lugar Um</h5>
-			      <p class="card-text">Texto descritivo pequeno sobre o lugar.</p>
-			      <a href="#" class="btn btn-primary">Detalhes</a>
-			    </div>
-			  </div>
-			</div>
-	  	    <div class="col">
-	  	      <div class="card w-100" style="width: 18rem;">
-			    <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
-			    <div class="card-body">
-			      <h5 class="card-title">Lugar Um</h5>
-			      <p class="card-text">Texto descritivo pequeno sobre o lugar.</p>
-			      <a href="#" class="btn btn-primary">Detalhes</a>
-			    </div>
-			  </div>
+	  	      <label for="selectTipo" class="form-label">Spoter / Divulgador <span class="text-danger">*</span></label>
+			  <select class="form-select" aria-label="Escolha uma opção">
+			    <option selected disabled="disabled">Escolha uma opção</option>
+			    <option value="s">Spoter - busco lugares</option>
+			    <option value="d">Divulgador - Sou dono e quero ser encontrado</option>
+			  </select>
 	  	    </div>
 	  	    <div class="col">
-	  	      <div class="card w-100" style="width: 18rem;">
-			    <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
-			    <div class="card-body">
-			      <h5 class="card-title">Lugar Um</h5>
-			      <p class="card-text">Texto descritivo pequeno sobre o lugar.</p>
-			      <a href="#" class="btn btn-primary">Detalhes</a>
-			    </div>
-			  </div>
 	  	    </div>
 	  	  </div>
 
+	  	  <div class="row py-3 my-3 row-endereco border-top"><!-- Formulario - Linha -->
+	  	  	<h3 class="text-center"> Endereço </h3>
+	  	    <div class="col">
+	  	      <label for="exampleFormControlInput1" class="form-label">Rua</label>
+			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+	  	    </div>
+	  	    <div class="col-2">
+	  	      <label for="exampleFormControlInput1" class="form-label">Numero</label>
+			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+	  	    </div>
+	  	    <div class="col-2">
+	  	      <label for="exampleFormControlInput1" class="form-label">complemento</label>
+			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+	  	    </div>
+	  	  </div>
+	  	  <div class="row pb-4 pt-1 mb-3 row-endereco border-bottom"><!-- Formulario - Linha -->
+	  	    <div class="col">
+	  	      <label for="exampleFormControlInput1" class="form-label">Bairro</label>
+			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+	  	    </div>
+	  	    <div class="col">
+	  	      <label for="exampleFormControlInput1" class="form-label">Cidade</label>
+			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+	  	    </div>
+	  	    <div class="col">
+	  	      <label for="exampleFormControlInput1" class="form-label">Estado</label>
+			  <select class="form-select" aria-label="Default select example">
+			    <option selected disabled="disabled">Escolha uma opção</option>
+			    <option value="1">Spoter - busco lugares</option>
+			    <option value="2">Divulgador - Sou dono e quero ser encontrado</option>
+			    <option value="2">Divulgador - Sou dono e quero ser encontrado</option>
+			  </select>
+	  	    </div>
+	  	    <div class="col">
+	  	      <label for="exampleFormControlInput1" class="form-label">CEP</label>
+			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+	  	    </div>
+	  	  </div>
+
+
+	  	  <div class="row py-3"><!-- Formulario - Linha -->
+	  	    <div class="col">
+	  	      <input type="submit" name="submit-form" value="Cadastrar" class="btn btn-primary" />
+	  	    </div>
+	  	  </div>
+
+	  	  </form>
 	  	</div>
 	  </content>
 
-	  <footer class="bg-dark text-light py-3 sticky-bottom">
+	  <footer class="bg-dark text-light py-3 fixed-bottom">
 	  	<div class="container">
 	  		<div class="row">
 	  			<div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae viverra enim, ac dignissim orci. Praesent sed elit rhoncus metus euismod mollis at eget dui.</div>
@@ -154,8 +147,8 @@
 	  	</div>
 	  </footer>
 
-	  <script src="assets/js/default.js"></script>
-	  <script src="assets/js/bootstrap.bundle.min.js"></script>
+	  <script src="../assets/js/default.js"></script>
+	  <script src="../assets/js/bootstrap.bundle.min.js"></script>
 	</body>
 
 </html>
