minor fixes; lista completa de estados

--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -47,7 +47,7 @@
 	    </div>
 	  </header>
 	  
-	  <content>
+	  <content class="h-100">
 	  	<div class="container h-100">
 	  	  <form action="../usuario/login.html" class=" needs-validation">
 
