--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
 	  	</div>
 	  </content>
 
-	  <footer class="bg-dark text-light py-3 sticky-bottom">
+	  <footer class="bg-dark text-light py-3 sticky-bottom min-vh-100">
 	  	<div class="container">
 	  		<div class="row">
 	  			<div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae viverra enim, ac dignissim orci. Praesent sed elit rhoncus metus euismod mollis at eget dui.</div>
