--- a/src/usuario/cadastro.html
+++ b/src/usuario/cadastro.html
@@ -48,7 +48,7 @@
 	  </header>
 	  
 	  <content>
-	  	<div class="container h-100">
+	  	<div class="container h-100 min-vh-100">
 	  	  <form class=" needs-validation" name="formCadUsuario" id="formCadUsuario" onsubmit="cadastraUsuario(this);">
 
 	  	  <div class="row py-5"><!-- Título -->
@@ -174,7 +174,7 @@
 	  	</div>
 	  </content>
 
-	  <footer class="bg-dark text-light py-3 -bottom">
+	  <footer class="bg-dark text-light py-3">
 	  	<div class="container">
 	  		<div class="row">
 	  			<div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae viverra enim, ac dignissim orci. Praesent sed elit rhoncus metus euismod mollis at eget dui.</div>
