login considerando usuario que se cadastra pela pagina de cadastro

--- a/src/estabelecimento/cadastro.html
+++ b/src/estabelecimento/cadastro.html
@@ -39,9 +39,9 @@
 	            <i class="fa-regular fa-user"></i>
 	          </a>
 	          <ul class="dropdown-menu my-2" aria-labelledby="dropdownMenuLink">
-			    <li><a class="dropdown-item" href="#">Login</a></li>
+			    <li><a class="dropdown-item" href="../usuario/login.html">Login</a></li>
 			    <li><a class="dropdown-item" href="#">Cadastro</a></li>
-			  </ul>
+			  </ul>	
 	        </div>
 	      </div>
 	    </div>
