--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,8 @@
 	            <i class="fa-regular fa-user"></i>
 	          </a>
 	          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-			    <li><a class="dropdown-item" href="#">Login</a></li>
+			    <li><span id="nomeUsuario" class="dropdown-item border-bottom"></span></li>
+			    <li><a class="dropdown-item" href="./login.html">Login</a></li>
 			    <li><a class="dropdown-item" href="usuario/cadastro.html">Cadastro</a></li>
 			  </ul>
 	        </div>
@@ -48,7 +49,7 @@
 	  </header>
 	  
 	  <content>
-	  	<div class="container">
+	  	<div class="container min-vh-100">
 
 	  	  <div class="row py-5"><!-- Título -->
 	  	    <div class="col">
@@ -144,7 +145,7 @@
 	  	</div>
 	  </content>
 
-	  <footer class="bg-dark text-light py-3 sticky-bottom min-vh-100">
+	  <footer class="bg-dark text-light py-3 sticky-bottom">
 	  	<div class="container">
 	  		<div class="row">
 	  			<div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae viverra enim, ac dignissim orci. Praesent sed elit rhoncus metus euismod mollis at eget dui.</div>
