--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -39,7 +39,7 @@
 	            <i class="fa-regular fa-user"></i>
 	          </a>
 	          <ul class="dropdown-menu my-2" aria-labelledby="dropdownMenuLink">
-			    <li><a class="dropdown-item" href="#">Login</a></li>
+			    <li><a class="dropdown-item" href="./login.html">Login</a></li>
 			    <li><a class="dropdown-item" href="#">Cadastro</a></li>
 			  </ul>
 	        </div>
