adcionando link apenas para usuario logado

--- a/src/usuario/cadastro.html
+++ b/src/usuario/cadastro.html
@@ -77,12 +77,12 @@
 	  	  <div class="row py-3"><!-- Formulario - Linha -->
 	  	      <label for="selectTipo" class="form-label">Spoter / Divulgador <span class="text-danger">*</span></label>
 	  	    <div class="col">
-			  <input class="form-check-input" type="radio" name="tipoUsuario" id="flexRadiotipoDivulgador" checked="checked">
+			  <input class="form-check-input" type="radio" name="tipoUsuario" id="flexRadiotipoDivulgador" value="divulgador" checked="checked">
 			  <label class="form-check-label" for="flexRadioDefault1">
 			    Divulgador - Sou dono e quero ser encontrado
 			  </label>
 			  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			  <input class="form-check-input" type="radio" name="tipoUsuario" id="flexRadiotipoSpoter">
+			  <input class="form-check-input" type="radio" name="tipoUsuario" id="flexRadiotipoSpoter" value="spoter">
 			  <label class="form-check-label" for="flexRadioDefault1">
 			    Spoter - Quero conhecer novos lugares
 			  </label>
