--- a/src/estabelecimento/cadastro.html
+++ b/src/estabelecimento/cadastro.html
@@ -38,10 +38,11 @@
 	            <!-- <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle"> -->
 	            <i class="fa-regular fa-user"></i>
 	          </a>
-	          <ul class="dropdown-menu my-2" aria-labelledby="dropdownMenuLink">
-			    <li><a class="dropdown-item" href="../usuario/login.html">Login</a></li>
-			    <li><a class="dropdown-item" href="#">Cadastro</a></li>
-			  </ul>	
+	          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+			    <li><span id="nomeUsuario" class="dropdown-item border-bottom"></span></li>
+			    <li><a class="dropdown-item" href="./login.html">Login</a></li>
+			    <li><a class="dropdown-item" href="usuario/cadastro.html">Cadastro</a></li>
+			  </ul>
 	        </div>
 	      </div>
 	    </div>
@@ -49,7 +50,7 @@
 	  
 	  <content>
 	  	<div class="container min-vh-100">
-	  	  <form class=" needs-validation" name="formCadUsuario" id="formCadUsuario" onsubmit="cadastraUsuario(this);">
+	  	  <form class=" needs-validation" name="formCadEstabelecimento" id="formCadEstabelecimento" onsubmit="cadastraEstabelecimento(this);" enctype="multipart/form-data">
 
 	  	  <div class="row py-5"><!-- Título -->
 	  	    <div class="col">
@@ -68,7 +69,7 @@
 		  	    </div>
 		  	    <div class="w-100 py-2">
 		  	      <label for="inputlocal" class="form-label">localizacao <span class="text-danger">*</span></label>
-				  <input type="email" class="form-control" id="inputlocal" name="inputlocal" required placeholder="Rua: abc">
+				  <input type="text" class="form-control" id="inputlocal" name="inputlocal" required placeholder="Rua: abc">
 		  	    </div>
 		  	    <div class="w-100 py-2">
 		  	      <label for="inputTipoEstabelecimento" class="form-label">Tipo do estabelecimento</label>
@@ -129,6 +130,11 @@
 		  	  </div>
 	  	  	  <div class="row py-3"><!-- Formulario - Linha -->
 		  	    <div class="w-100 py-2">
+		  	      <input type="file" name="file-image-stab" id="file-image-stab" value="" class="form-control" />
+		  	    </div>
+		  	  </div>
+	  	  	  <div class="row py-3"><!-- Formulario - Linha -->
+		  	    <div class="w-100 py-2">
 		  	      <input type="submit" name="submit-form" value="Cadastrar" class="btn btn-primary" />
 		  	    </div>
 		  	  </div>
@@ -150,8 +156,8 @@
 	  	</div>
 	  </footer>
 
-	  <script src="cadastro.js"></script>
 	  <script src="../assets/js/default.js"></script>
+	  <script src="cadastro.js"></script>
 	  <script src="../assets/js/bootstrap.bundle.min.js"></script>
 	</body>
 
