--- a/src/usuario/cadastro.html
+++ b/src/usuario/cadastro.html
@@ -38,9 +38,10 @@
 	            <!-- <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle"> -->
 	            <i class="fa-regular fa-user"></i>
 	          </a>
-	          <ul class="dropdown-menu my-2" aria-labelledby="dropdownMenuLink">
+	          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+			    <li><span id="nomeUsuario" class="dropdown-item border-bottom"></span></li>
 			    <li><a class="dropdown-item" href="./login.html">Login</a></li>
-			    <li><a class="dropdown-item" href="#">Cadastro</a></li>
+			    <li><a class="dropdown-item" href="usuario/cadastro.html">Cadastro</a></li>
 			  </ul>
 	        </div>
 	      </div>
