[WIP] listando cadastros realizados

--- a/src/index.html
+++ b/src/index.html
@@ -50,13 +50,12 @@
 	  </header>
 	  
 	  <content>
-	  	<div class="container min-vh-100">
-
 	  	  <div class="row py-5"><!-- Título -->
 	  	    <div class="col">
 	  	    	<h1 class="text-center">Confira os melhores da semana!</h1>
 	  	    </div>
 	  	  </div>
+	  	<div class="container min-vh-100" id="listaIndex">
 
 	  	  <!-- <div class="row py-5"><!-- Abas -- >
 	  	    <div class="col">
