--- a/src/estabelecimento/cadastro.html
+++ b/src/estabelecimento/cadastro.html
@@ -50,7 +50,7 @@
 	  
 	  <content>
 	  	<div class="container min-vh-100">
-	  	  <form class=" needs-validation" name="formCadEstabelecimento" id="formCadEstabelecimento" onsubmit="cadastraEstabelecimento(this);" enctype="multipart/form-data">
+	  	  <form class=" needs-validation" name="formCadEstabelecimento" id="formCadEstabelecimento" >
 
 	  	  <div class="row py-5"><!-- Título -->
 	  	    <div class="col">
@@ -135,7 +135,7 @@
 		  	  </div>
 	  	  	  <div class="row py-3"><!-- Formulario - Linha -->
 		  	    <div class="w-100 py-2">
-		  	      <input type="submit" name="submit-form" value="Cadastrar" class="btn btn-primary" />
+		  	      <input type="button" name="submit-form" value="Cadastrar" class="btn btn-primary" onclick="cadastraEstabelecimento(this.form);" />
 		  	    </div>
 		  	  </div>
 	  	  	</div>
@@ -145,7 +145,6 @@
 	  	  </form>
 	  	</div>
 	  </content>
-
 	  <footer class="bg-dark text-light py-3">
 	  	<div class="container">
 	  		<div class="row">
@@ -155,6 +154,10 @@
 	  		</div>
 	  	</div>
 	  </footer>
+
+<div class="bg-dark d-none" id="exampleModalLive" tabindex="999999" aria-labelledby="exampleModalLiveLabel" style="position: absolute; top:0; left: 0; width: 100%; height: 100%; opacity: 50%;" aria-modal="true" role="dialog"><div class="spinner-border text-light" style="width: 3rem; height: 3rem; margin: 30% 50%;" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div></div>
 
 	  <script src="../assets/js/default.js"></script>
 	  <script src="cadastro.js"></script>
