--- a/src/index.html
+++ b/src/index.html
@@ -156,6 +156,7 @@
 	  </footer>
 
 	  <script src="assets/js/default.js"></script>
+	  <script src="assets/js/index.js"></script>
 	  <script src="assets/js/bootstrap.bundle.min.js"></script>
 	</body>
 
