--- a/src/usuario/login.html
+++ b/src/usuario/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 </head>
 <link rel="stylesheet" href="../assets/css/styleLogin.css">
-<body>
+<body onload="deslogar">
     <div class="flex-container">
         <div id="login-container">
             <h1>Login</h1>
