listagem dividida por tipo de estabelecimento

--- a/src/estabelecimento/cadastro.html
+++ b/src/estabelecimento/cadastro.html
@@ -27,6 +27,18 @@
 
 	        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 ml-2">
 	          <li><a href="#" class="nav-link px-2 link-dark text-primary">Sobre nós</a></li>
+	          <div class="dropdown apenas-logado">
+				  <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+				    Listas
+				  </button>
+				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+				    <li><a href="./lista_bares.html" class="nav-link px-2 link-dark text-primary">Bares</a></li>
+				    <li><a href="./lista_restaurantes.html" class="nav-link px-2 link-dark text-primary">Restaurantes</a></li>
+				    <li><a href="./lista_teatrocinema.html" class="nav-link px-2 link-dark text-primary">Teatro / Cinema</a></li>
+				    <li><a href="./lista_hotel.html" class="nav-link px-2 link-dark text-primary">Hotel</a></li>
+				    <li><a href="./lista_shopping.html" class="nav-link px-2 link-dark text-primary">Shopping</a></li>
+				  </ul>
+			  </div>
 	        </ul>
 
 	        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
