--- a/src/estabelecimento/lista_hotel.html
+++ b/src/estabelecimento/lista_hotel.html
@@ -11,7 +11,7 @@
 		<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 
 		<!-- Bootstrap CSS -->
-		<link href="./assets/css/bootstrap.min.css" rel="stylesheet" >
+		<link href="../assets/css/bootstrap.min.css" rel="stylesheet" >
 
 		<script src="https://kit.fontawesome.com/8674b8f97f.js" crossorigin="anonymous"></script>
 	</head>
@@ -27,17 +27,17 @@
 
 	        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 ml-2">
 	          <li><a href="#" class="nav-link px-2 link-dark text-primary">Sobre nós</a></li>
-	          <li class="apenas-logado"><a href="./estabelecimento/cadastro.html" class="nav-link px-2 link-dark text-primary">Cadastro</a></li>
+	          <li class="apenas-logado"><a href="./cadastro.html" class="nav-link px-2 link-dark text-primary">Cadastro</a></li>
 	          <div class="dropdown apenas-logado">
 				  <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
 				    Listas
 				  </button>
 				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-				    <li><a href="./estabelecimento/lista_bares.html" class="nav-link px-2 link-dark text-primary">Bares</a></li>
-				    <li><a href="./estabelecimento/lista_restaurantes.html" class="nav-link px-2 link-dark text-primary">Restaurantes</a></li>
-				    <li><a href="./estabelecimento/lista_teatrocinema.html" class="nav-link px-2 link-dark text-primary">Teatro / Cinema</a></li>
-				    <li><a href="./estabelecimento/lista_hotel.html" class="nav-link px-2 link-dark text-primary">Hotel</a></li>
-				    <li><a href="./estabelecimento/lista_shopping.html" class="nav-link px-2 link-dark text-primary">Shopping</a></li>
+				    <li><a href="./lista_bares.html" class="nav-link px-2 link-dark text-primary">Bares</a></li>
+				    <li><a href="./lista_restaurantes.html" class="nav-link px-2 link-dark text-primary">Restaurantes</a></li>
+				    <li><a href="./lista_teatrocinema.html" class="nav-link px-2 link-dark text-primary">Teatro / Cinema</a></li>
+				    <li><a href="./lista_hotel.html" class="nav-link px-2 link-dark text-primary">Hotel</a></li>
+				    <li><a href="./lista_shopping.html" class="nav-link px-2 link-dark text-primary">Shopping</a></li>
 				  </ul>
 			  </div>
 	        </ul>
@@ -68,25 +68,6 @@
 	  	    </div>
 	  	  </div>
 	  	<div class="container min-vh-100" id="listaIndex">
-
-	  	  <!-- <div class="row py-5"><!-- Abas -- >
-	  	    <div class="col">
-	  	    	<ul class="nav nav-tabs">
-				  <li class="nav-item">
-				    <a class="nav-link active" aria-current="page" href="#">Todos</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Bar</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Restaurante</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Hotel</a>
-				  </li>
-				</ul>
-	  	    </div>
-	  	  </div> -->
 	  	  
 	  	  <div class="row py-5"><!-- Cards dos lugares -->
 	  	    <div class="col">
@@ -167,9 +148,9 @@
 	  	</div>
 	  </footer>
 
-	  <script src="assets/js/default.js"></script>
-	  <script src="assets/js/index.js"></script>
-	  <script src="assets/js/bootstrap.bundle.min.js"></script>
+	  <script src="../assets/js/default.js"></script>
+	  <script src="listas.js"></script>
+	  <script src="../assets/js/bootstrap.bundle.min.js"></script>
 	</body>
 
 </html>
